# Water-Simulations

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Code/: advanced_simulations.py  hybrid_simulation.py  save_animation.py  static_analysis.py
Code/Excess/: README_hybrid_simulation.md  README_realtime_simulation.md  README_save_animation.md  README_static_analysis.md
docs/: picFlip.md  sph.md  stableFluids.md  theory.md
scripts/: runKarmanStreet.py  runLidDrivenCavity.py  runPicFlipDamBreak.py  runRayleighTaylor.py  runRealtime.py  runSavedSwirl.py  runStaticAnalysis.py
tests/: testKernels.py  testSolvers.py
watersim/: __init__.py  config.py
watersim/scenes/: __init__.py  damBreak.py  karmanStreet.py  lidDrivenCavity.py  rayleighTaylor.py  realtime.py  staticAnalysis.py  swirl.py
watersim/solvers/: __init__.py  base.py  kernels.py  picFlip.py  sph.py  stableFluids.py
watersim/viz/: __init__.py  animator.py  overlays.py  theme.py
