[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "watersim"
version = "0.1.0"
description = "2D incompressible fluid simulations: SPH, Stable Fluids, PIC/FLIP."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "Pillow>=10.0",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
include = ["watersim*"]
exclude = ["tests*", "docs*", "scripts*", "Plots*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
python_functions = ["test*"]
